# cr

./: .clang-format  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  README.md  appveyor.yml  cr.h  fips.yml
.github/workflows/: codeql.yml
cmake/: fetch_dependencies.cmake
cr/: CMakeLists.txt  cr.h
samples/: CMakeLists.txt  basic_guest.c  basic_guest.cpp  basic_guest_b.c  basic_host.cpp  basic_host_b.cpp  imgui_guest.cpp  imgui_host.cpp
samples/basic/: CMakeLists.txt  basic_guest.c  basic_host.cpp
samples/imgui/: CMakeLists.txt  imgui_guest.cpp
samples/imgui/GL/: CMakeLists.txt
samples/imgui/cmake/: imgui_deps.cmake
tests/: CMakeLists.txt  test.cpp  test_basic.cpp  test_basic.x  test_data.h
